--- a/Editor/Resources/NoiseKitEditor.uxml
+++ b/Editor/Resources/NoiseKitEditor.uxml
@@ -1,5 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
     <ui:ScrollView style="max-width: initial; flex-direction: column; flex-grow: 1; justify-content: flex-start; align-items: flex-end; min-width: auto; flex-shrink: 1; transform-origin: center; overflow: visible; max-height: initial;">
+        <ui:VisualElement name="ModeSettings" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); margin-bottom: 5px; margin-left: 3px; margin-top: 2px; margin-right: 6px; flex-direction: row;">
+            <ui:DropdownField index="-1" choices="System.Collections.Generic.List`1[System.String]" name="ModeDropdown" style="flex-grow: 1; -unity-font-style: normal; margin-left: 0; margin-right: 3px; margin-top: 1px; margin-bottom: 1px; flex-shrink: 0; flex-wrap: nowrap; flex-direction: row;" />
+        </ui:VisualElement>
         <ui:Foldout text="Noise Selection" name="NoiseSelection" style="align-items: stretch; justify-content: space-between; align-self: auto; flex-direction: column; flex-wrap: nowrap; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-left-width: 0.5px; border-right-width: 0.5px; border-top-width: 0.5px; border-bottom-width: 0; -unity-font-style: bold; min-width: auto; min-height: auto;">
             <ui:VisualElement name="SelectedNoise" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); -unity-font-style: normal; margin-top: 5px; padding-right: 0; margin-right: 5px; margin-bottom: 10px;">
                 <ui:VisualElement name="SelectedNoiseTitle" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0.32); min-height: 15px; border-top-left-radius: 2px; border-bottom-left-radius: 0; border-top-right-radius: 2px; border-bottom-right-radius: 0; border-left-width: 0.5px; border-right-width: 0.5px; border-top-width: 0.5px; border-bottom-width: 0; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); margin-left: 0; padding-left: 0; padding-top: 0; max-width: initial; max-height: 15px; height: 15px; margin-top: 0; padding-right: 0; padding-bottom: 0;">
@@ -41,6 +44,7 @@
                 <ui:Label text="Resolution:" display-tooltip-when-elided="true" style="-unity-font-style: normal; -unity-text-align: upper-left; align-items: auto; justify-content: space-around; flex-direction: column; translate: 0 3px;" />
                 <ui:TextField picking-mode="Ignore" value="filler text" name="NoiseResX" style="flex-grow: 1; -unity-font-style: normal;" />
                 <ui:TextField picking-mode="Ignore" value="filler text" name="NoiseResY" style="flex-grow: 1; -unity-font-style: normal;" />
+                <ui:TextField picking-mode="Ignore" value="filler text" name="NoiseResZ" style="flex-grow: 1; -unity-font-style: normal;" />
                 <ui:Button text="Update" display-tooltip-when-elided="true" name="UpdateResolutionButton" style="-unity-font-style: normal; margin-left: 0; padding-left: 5px; border-left-width: 5px;" />
             </ui:VisualElement>
             <ui:VisualElement name="FileSettings" style="flex-grow: 1; background-color: rgba(0, 0, 0, 0); margin-bottom: 5px; margin-left: 0; margin-top: 2px; margin-right: 6px; flex-direction: row;">
